--- a/gestures-service/config/config-local.yml
+++ b/gestures-service/config/config-local.yml
@@ -1,11 +1,9 @@
 app:
-  http_port: 8080  
   env: development
-  idle_timeout: 1m
-  read_timeout: 30s
-  write_timeout: 60s
-  shutdown_timeout: 10s
-  jwt_token_ttl: 24h
+  grpc:
+    timeout: 1m
+    port: 5100 
+  jwt_token_ttl: 1h
 
 postgres:                     
   max_pool_size: 50
