--- a/gestures-service/.env
+++ b/gestures-service/.env
@@ -1,6 +1,8 @@
 # App
 SERVICE_NAME=gestures-service
-APP_HTTP_PORT=8080
+GRPC_PORT=3001
+APP_ENV=development
+JWT_SECRET_KEY=cyansnbrst
 
 # PostgreSQL 
 POSTGRES_HOST=localhost
@@ -8,5 +10,5 @@ POSTGRES_DOCKER_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
-POSTGRES_DB=merch_store
+POSTGRES_DB=gestures
 POSTGRES_SSLMODE=disable
