--- a/sso-service/config/config-local.yml
+++ b/sso-service/config/config-local.yml
@@ -1,8 +1,10 @@
 app:
+  name: sso-service
   env: development
   grpc:
     timeout: 1m
-    port: 5100 
+    port: 3000 
+  jwt_secret_key: "cyansnbrst"
   jwt_token_ttl: 1h
 
 postgres:                     
