--- a/protos/Makefile
+++ b/protos/Makefile
@@ -1,6 +1,8 @@
 .PHONY: gen
-gen: 
+gen:
 	find proto -name "*.proto" | xargs protoc \
 		-I proto \
-		--go_out=./gen/go/ --go_opt=paths=source_relative \
-		--go-grpc_out=./gen/go/ --go-grpc_opt=paths=source_relative
+		-I third_party/googleapis \
+		--go_out=./gen/go --go_opt=paths=source_relative \
+		--go-grpc_out=./gen/go --go-grpc_opt=paths=source_relative \
+		--grpc-gateway_out=./gen/go --grpc-gateway_opt=paths=source_relative
