--- a/protos/Makefile
+++ b/protos/Makefile
@@ -2,7 +2,7 @@
 gen:
 	find proto -name "*.proto" | xargs protoc \
 		-I proto \
-		-I third_party/googleapis \
+		-I third-party/googleapis \
 		--go_out=./gen/go --go_opt=paths=source_relative \
 		--go-grpc_out=./gen/go --go-grpc_opt=paths=source_relative \
 		--grpc-gateway_out=./gen/go --grpc-gateway_opt=paths=source_relative
